# Telegram_Bot_Agnia

./: README.md  config.yml  dockerfile  justfile  pyproject.toml
models/: tech_lexRank.pkl
src/agnia_smart_digest/: __init__.py  __main__.py  router.py  settings.py
src/agnia_smart_digest/action/: base.py  exception.py  registry.py
src/agnia_smart_digest/action/ai/: extract_article_number.py  extract_email_number.py  extract_email_receiver.py  extract_email_subject.py  extract_email_text.py  extract_format.py  extract_platforms.py  extract_reminder_datetime.py  extract_search_query.py  generate_reminder_text.py
src/agnia_smart_digest/action/backend/: clean_emails.py  emails.py  moodle.py  news.py  ranking_emails.py  schedule_reminder.py  search_emails.py  send_email.py  summarize_emails.py  teamflame.py  travel_time.py  weather.py
src/agnia_smart_digest/external_services/: embedder.py  llm.py  telegram.py
src/agnia_smart_digest/servers/http/: exception.py  gitflame.py  server.py  utils.py
src/agnia_smart_digest/servers/socket/: server.py
src/agnia_smart_digest/utils/: helpers.py  logger.py
